cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(zlib_libpng C)

set(SKIP_INSTALL_EXPORT true)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)

set(ZLIB_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/zlib")
add_subdirectory(zlib)

get_directory_property(
	ZLIB_BUILD_DIRECTORY
	DIRECTORY
	${ZLIB_DIRECTORY}
	DEFINITION
	CMAKE_CURRENT_BINARY_DIR
)

set(ZLIB_LIBRARY zlib)
set(ZLIB_INCLUDE_DIR ${ZLIB_DIRECTORY})

set(LIBPNG_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/libpng")

include_directories(
	${ZLIB_DIRECTORY}
	${ZLIB_BUILD_DIRECTORY}
	${LIBPNG_DIRECTORY}
	${LIBPNG_BUILD_DIRECTORY}
)

add_subdirectory(libpng)

get_directory_property(
	LIBPNG_BUILD_DIRECTORY
	DIRECTORY
	${LIBPNG_DIRECTORY}
	DEFINITION
	CMAKE_CURRENT_BINARY_DIR
)

get_directory_property(
	LIBPNG_STATIC
	DIRECTORY
	${LIBPNG_DIRECTORY}
	DEFINITION
	PNG_LIB_NAME_STATIC
)

get_directory_property(
	LIBPNG_SHARED
	DIRECTORY
	${LIBPNG_DIRECTORY}
	DEFINITION
	PNG_LIB_NAME
)

set(ZLIB_DIRECTORY ${ZLIB_DIRECTORY} PARENT_SCOPE)
set(ZLIB_BUILD_DIRECTORY ${ZLIB_BUILD_DIRECTORY} PARENT_SCOPE)
set(ZLIB_STATIC zlibstatic PARENT_SCOPE)
set(ZLIB_SHARED zlib PARENT_SCOPE)
set(LIBPNG_DIRECTORY ${LIBPNG_DIRECTORY} PARENT_SCOPE)
set(LIBPNG_BUILD_DIRECTORY ${LIBPNG_BUILD_DIRECTORY} PARENT_SCOPE)
set(LIBPNG_STATIC ${LIBPNG_STATIC} PARENT_SCOPE)
set(LIBPNG_SHARED ${LIBPNG_SHARED} PARENT_SCOPE)

if(NOT DEFINED LIBS_INCLUDE_DIRECTORIES)
	set(LIBS_INCLUDE_DIRECTORIES
		${ZLIB_DIRECTORY}
		${ZLIB_BUILD_DIRECTORY}
		${LIBPNG_DIRECTORY}
		${LIBPNG_BUILD_DIRECTORY}
		PARENT_SCOPE
	)
else()
	list(APPEND LIBS_INCLUDE_DIRECTORIES
		${ZLIB_DIRECTORY}
		${ZLIB_BUILD_DIRECTORY}
		${LIBPNG_DIRECTORY}
		${LIBPNG_BUILD_DIRECTORY}
	)
endif()